--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@eslint/compat": "^1.0.1",
     "@eslint/js": "^9.3.0",
     "@types/express": "^4.17.21",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.12.12",
     "eslint": "^9.3.0",
     "eslint-plugin-react": "^7.34.1",
     "express": "^4.19.2",
     "globals": "^15.2.0",
+    "mongoose": "^8.4.0",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
@@ -24,7 +26,6 @@
   },
   "dependencies": {
     "@types/dotenv": "^8.2.0",
-    "dotenv": "^16.4.5",
-    "mongoose": "^8.4.0"
+    "dotenv": "^16.4.5"
   }
 }
