--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   "devDependencies": {
     "@eslint/compat": "^1.0.1",
     "@eslint/js": "^9.3.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.12.12",
+    "bcrypt": "^5.1.1",
     "eslint": "^9.3.0",
     "eslint-plugin-react": "^7.34.1",
     "express": "^4.19.2",
     "globals": "^15.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
@@ -26,6 +31,9 @@
   },
   "dependencies": {
     "@types/dotenv": "^8.2.0",
-    "dotenv": "^16.4.5"
+    "@types/http-errors": "^2.0.4",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
+    "http-errors": "^2.0.0"
   }
 }
