--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.12.12",
     "bcrypt": "^5.1.1",
     "eslint": "^9.3.0",
@@ -34,6 +35,7 @@
     "@types/http-errors": "^2.0.4",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
-    "http-errors": "^2.0.0"
+    "http-errors": "^2.0.0",
+    "multer": "^1.4.5-lts.1"
   }
 }
